
Changelog Bypass Paywalls Clean - Chrome

Post-release
Add Delish, Elle Decor, Harper's Bazaar & Oprah Daily
Add NWT Media.se (opt-in to custom sites)
Add Stuttgarter-zeitung.de
Remove Golem.de (fix obsolete)
Remove Tagesspiegel.de (fix obsolete)
Fix Hearst Communications magazines (js)

* v3.2.3.0 (2023-07-02)
Add Groupe ESH Medias (ch)
Add Hln.be (link to archive.is)
Add MacroBusiness.com.au (ld_nuxt)
Add Puck.news
Add Zeit.de (link to archive.is)
Remove AerzteBlatt.de (fix obsolete)
Remove LePoint.fr (fix obsolete)
Remove Stratfor (fix obsolete)
Remove The Times Literary Supplement (fix obsolete)
Remove Time Magazine (no paywall)
Fix Beobachter.ch & Handelszeitung.ch
Fix Foreign Policy (Insider)
Fix Telegraaf.nl (images)

* v3.2.2.0 (2023-06-25)
Add Follow the Money (Ftm.eu)
Add Groupe SynerJ Media (opt-in to custom sites)
Add Hindu Tamil Thisai (India)
Fix Gazzetta.it (text only)
Fix LeScienze.it
Fix LeTelegramme.fr (css)
Fix The Athletic (timing)
Fix Times of India (amp-images)
Maintenance updated sites (version)

* v3.2.1.0 (2023-06-05)
Add Boersen-zeitung.de
Fix El Mercurio (not Inversiones/Legal)
Fix ESPN USA
Fix Gazzetta.it (timing)
Fix Telegraaf.nl

* v3.2.0.0 (2023-05-29)
Add El Cronista (Argentina)
Add GauchaZH
Add Golem.de (link to archive.is)
Add TechTarget Group
Add VmnMedia.nl Group (opt-in to custom sites)
Remove Mz.de & Volksstimme.de (fix obsolete)
Remove Weltkunst.de (fix obsolete)
Fix Challenges.fr & Sciences et Avenir.fr
Fix Defector (cookie)
Fix Mediahuis Noord (json)
Fix Quora (AI bot crash)
Fix The Athletic (Kiwi)
Fix TheTimes.co.uk (overlay)
Fix TownNews sites (encrypted)
Add PowerShell-script for extension allowlist
Update popup (Google Search Tool)

* v3.1.9.0 (2023-05-21)
Remove (custom) Substack (fix obsolete)
Remove Sueddeutsche Zeitung (fix obsolete)
Fix Citywire
Fix DN.no
Fix Gruppo SAE.it (free articles only)
Fix LePoint.fr
Fix Schwaebische.de
Fix Tagesspiegel.de (not background/checkpoint)
Fix The Globe and Mail (title/comments)