@@ -372,7 +372,6 @@
     "*://*.lecourrierdesstrateges.fr/*",
     "*://*.ledauphine.com/*",
     "*://*.ledevoir.com/*",
-    "*://*.lefigaro.fr/*",
     "*://*.legrandcontinent.eu/*",
     "*://*.lehighvalleylive.com/*",
     "*://*.leidschdagblad.nl/*",
